# mlops-project

./: .deployignore  .dockerignore  .gcloudignore  .gitattributes  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  cloudbuild.yaml  code_coverage.md  config_cpu.yaml  config_gpu.yaml  data.dvc  data_zip.dvc  pyproject.toml  requirements.txt  run_vertex_job.sh  tasks.py  vertex_ai_train.yaml
.devcontainer/: devcontainer.json
.dvc/: config
.github/: dependabot.yaml
.github/agents/: dtu_mlops_agent.md
.github/prompts/: add_test.prompt.md
.github/workflows/: codecheck.yaml  deploy.yaml  linting.yaml  linting.yaml.bak  tests.yaml
.secrets/: .gitignore
cloud_deploy/: app.dockerfile  cloudbuild.yaml  cloudbuild_app.yaml  config_cpu.yaml  config_gpu.yaml  inferencebuild.yaml  run_cloud_docker_build.sh  run_vertex_job.sh  vertex_ai_train.yaml
cloud_deploy/app/: main.py  requirements.txt
data/: .gitignore
data/raw/eurosat/: .gitignore  EuroSAT.dvc
dockerfiles/: api.dockerfile  api_build.sh  api_run.sh  benchmark_data.pyZone.Identifier  evaluate.dockerfile  inference_gpu.dockerfile  train-gpu.dockerfile  train.dockerfile  train_gpu.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops-project/: README.md  pyproject.toml
models/: eurosat_models_eurosat_best.zipZone.Identifier
notebooks/: my_logger_exercise.py
outputs/2026-01-15/18-55-50/.hydra/: hydra.yaml
outputs/2026-01-15/18-59-14/.hydra/: hydra.yaml
profiling_tools/: cProfiler.sh  pytorch_heavy_profiler.sh  quick_profiler.sh  train_profiled.py  train_short.py  training_profile.prof  view_stats.py
reports/: README.md
reports/figures/: expenditure.csv
src/eurosat_classifier/: api.py  data.py  evaluate.py  model.py  predict_folder.py  test.py  train.py
src/eurosat_classifier/conf/: config.yaml
src/eurosat_classifier/lightning/: lightning_data.py  lightning_module.py  train_lightning.py
src/eurosat_classifier/scripts/: benchmark_data.py  download_data.py  entrypoint_train.py  starting_point.sh
src/football_match_predictor/: train.py
tests/: API_load_test.py  test_data.py  test_model.py  test_train.py
tests/apitests/: test_apis.py
wandb/: latest-run
wandb/offline-run-20260116_092251-zl5p7e2u/: run-zl5p7e2u.wandb
wandb/offline-run-20260116_092251-zl5p7e2u/files/: requirements.txt
wandb/run-20260115_185551-5os4xobs/: run-5os4xobs.wandb
wandb/run-20260115_185915-o31ukstm/: run-o31ukstm.wandb
wandb/run-20260115_190147-nelg24on/: run-nelg24on.wandb
wandb/run-20260115_190412-cugc6h8d/: run-cugc6h8d.wandb
wandb/run-20260115_190705-3g8pvo2d/: run-3g8pvo2d.wandb
wandb/run-20260115_191740-0tefxl45/: run-0tefxl45.wandb
wandb/run-20260115_192129-q3ksrqar/: run-q3ksrqar.wandb
(+17 files in other folders)
