[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[project]
name = "eurosat_classifier"
version = "0.0.1"
description = "eurosat_classifier"
authors = [
  { name = "team10", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "torch==2.5.0+cu124; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.20.0+cu124; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch==2.5.0; sys_platform == 'darwin'",
    "torchvision==0.20.0; sys_platform == 'darwin'",
    "torch==2.5.0; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "torchvision==0.20.0; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "timm==1.0.24",
    "typer==0.15.1",
    "uvicorn==0.34.0",
    "pylabels>=1.2.1",
    "kagglehub>=0.4.0",
    "hydra-core",
    "pytorch-lightning",
    "dvc>=3.66.1",
    "dvc-gs>=3.0.2",
    "mypy>=1.19.1",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.1",
    "wandb>=0.24.0",
    "weave>=0.52.24",
    "requests>=2.32.5",
    "opencv-python>=4.13.0.90",
    "google-cloud-storage>=3.8.0",
    "gcloud>=0.18.3",
    "evidently>=0.7.20",
    "scikit-learn>=1.8.0",
    "pandas>=3.0.0",
    "python-multipart>=0.0.21",
]

[dependency-groups]
dev = [
    "coverage==7.6.9",
    "invoke==2.2.0",
    "mkdocs-material==9.7.1",
    "mkdocs==1.6.1",
    "pre-commit==4.1.0",
    "pytest==8.3.4",
    "ruff==0.1.3",
    "mkdocstrings-python==1.12.2",
    "loguru",
    "matplotlib",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 120

[tool.coverage.run]
source = ["src"]
relative_files = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["eurosat_classifier"]
show_error_codes = true
pretty = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
exclude = [
  "data/",
  "models/",
  "outputs/",
  "logs/",
  "lightning_logs/",
  "docs/",
  ".venv/",
  "__pycache__/",
]

[[tool.mypy.overrides]]
module = [
  "torch.*",
  "torchvision.*",
  "kagglehub.*",
  "timm.*",
  "pytorch_lightning.*",
  "hydra.*",
]
ignore_missing_imports = true
